liberty-route.yaml
apiVersion: v1
kind: Route
metadata:
  name: liberty
spec:
  host: liberty.apps.sasin.cp.fyre.ibm.com
  port:
    targetPort: 9080-tcp
  to:
    kind: Service
    name: liberty
    weight: 100
  wildcardPolicy: None
