liberty-svc.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: liberty
spec:
  host: liberty.apps.sasin.cp.fyre.ibm.com
  port:
    targetPort: 9080-tcp
  to:
    kind: Service
    name: liberty
    weight: 100
  wildcardPolicy: None
[root@sasin-inf libargo]# cat liberty-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: liberty
spec:
  ports:
  - name: 9080-tcp
    port: 9080
    protocol: TCP
    targetPort: 9080
  selector:
    app: liberty
  sessionAffinity: None
  type: ClusterIP
